feat: add project
feat: add project

--- a/styles/scss/_common.scss
+++ b/styles/scss/_common.scss
@@ -27,6 +27,7 @@ Header 6
       padding: 35px 15px;
       color: $main-2;
       transition-duration: 0.2s;
+      font-size: 20px;
     }
 
     .nav-item:hover .nav-link,
